--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- ---- -->
 
     <!-- Link CSS -->
-    <link rel="stylesheet" href="../HomePage.css">
+    <link rel="stylesheet" href="./index.css">
     <!-- --- -->
 
 </head>
